--- a/src/index.css
+++ b/src/index.css
@@ -1,73 +1,74 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Russo+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Russo+One&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-    scroll-behavior: smooth;
-  }
-
-body{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    height: 100vh;
-    font-family: 'Montserrat', sans-serif !important;
-
+  scroll-behavior: smooth;
 }
-  input:focus,
-  button:focus,
-  textarea:focus,
-  select:focus {
-    outline: 0;
-  }
 
-  .flex-colo {
-    @apply flex flex-col justify-center items-center;
-  }
-  .flex-rows {
-    @apply flex justify-center items-center;
-  }
-  .transitione {
-    @apply transition ease-in-out duration-700;
-  }
-
-.main{
-  background: linear-gradient(170deg, rgb(0 0 0) 32.3%, rgb(0 0 0 / 105%) 52.26%);
-
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  font-family: "Montserrat", sans-serif !important;
 }
-.bt-linear{
+input:focus,
+button:focus,
+textarea:focus,
+select:focus {
+  outline: 0;
+}
+
+.flex-colo {
+  @apply flex flex-col justify-center items-center;
+}
+.flex-rows {
+  @apply flex justify-center items-center;
+}
+.transitione {
+  @apply transition ease-in-out duration-700;
+}
+
+.main {
+  background: linear-gradient(
+    170deg,
+    rgb(0 0 0) 32.3%,
+    rgb(0 0 0 / 105%) 52.26%
+  );
+}
+.bt-linear {
   background: linear-gradient(300deg, rgb(27, 15, 10) 0%, rgb(3 3 16) 89.89%);
-
 }
-.hero{
+.hero {
   height: 600px;
 }
-.count{
+.count {
   background: linear-gradient(180deg, #232025 36.04%, #2b2b2d 100%);
-
 }
-.top-hidden{
-  @apply scale-0
+.top-hidden {
+  @apply scale-0;
 }
-.top-hover:hover .top-hidden{
-  @apply scale-100
+.top-hover:hover .top-hidden {
+  @apply scale-100;
 }
 
 /* Owl */
-.owl-theme .owl-dots .owl-dot span{
+.owl-theme .owl-dots .owl-dot span {
   background-color: unset !important;
   border: 2px solid #191718;
 }
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span{
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
   background-color: rgb(47, 46, 46) !important;
 }
-.owl-theme .owl-dots{
- margin-top: 2rem !important;
+.owl-theme .owl-dots {
+  margin-top: 2rem !important;
 }
 
-@media (max-width:1024px) {
-  .bgSmall{
+@media (max-width: 1024px) {
+  .bgSmall {
     background: linear-gradient(180deg, #171819 36.04%, #1f2021 100%);
   }
 }
